Added bricks to black bricks smelting recipe
Tweaked value of fuels and added coolants
Fixed End Steel recipe
Fluid name look slighting different due to the new fluid registry system, textures will be adjusted with updated tints in the future
Fuels now require a duration in there recipe, the duration set that duration to the controller from the multiblock fuel tank
Added Black Brick Glass

//JEI Changes
All JEI categories now use the correct slot texture instead of a de-saturated version
Mixer now shows the fluid amount on the fluid stack instead of text above, has space for 12 input fluids
melting - switched the temp and heat, added this information to the fluid stack

//Multiblock Controller - BETA
This whole multiblock system is in BETA, please report any bugs you find

Added Multiblock Controller, a new controller that supports multiblock, must use black bricks/ black brick glass to build the multiblock
Max radius is 1000 blocks with pretty much any dimensions
Bigger internal volume the bigger the new Shared Tank will be (up to 1,000,000mb), Usable slots also increase with the size of the multiblock (up to 60)
Multiblock Controller speed, the default is now up to 1000, note this has no effect on usage this is just a default max value if modpack devs want to make it slower
This removes having to calculating the speed of the controller based on the fuel used, note this speed calculation is still used for the Simple Controller
The multiblock valid blocks are tag driven allowing for basically any block you want to add, this include a wall and a floor tag if modpack dev wish to change that
    "casting:controller_walls", "casting:controller_floor" respectively. By default black bricks can be used for both

Added Multiblock Fuel Tank, this is the fuel used to melt item in the controller, uses the same fuels as the Simple Tank, must be part of the multiblock.
    Has GUI to collect buckets and insert buckets into the tank
