@@ -16,7 +16,7 @@ loader_version_range=[4,)
 mod_id=casting
 mod_name=Casting
 mod_license=All Rights Reserved
-mod_version=2.0.1
+mod_version=2.0.3
 mod_group_id=com.benbenlaw.casting
 mod_authors=benbenlaw
 mod_description=Resource smelting and tool modifying mod.
