@@ -223,30 +223,31 @@
   "tooltips.casting.pickaxe_modifiers": "- Pickaxes",
   "tooltips.casting.shear_modifiers": "- Shears",
   "tooltips.casting.shovel_modifiers": "- Shovels",
-  "tooltips.casting.stats.auto_smelt": "Auto Smelt - %s",
-  "tooltips.casting.stats.beheading": "Beheading - %s%% Chance",
-  "tooltips.casting.stats.efficiency": "Efficiency - %s",
-  "tooltips.casting.stats.excavation": "Excavation - %s (%sx%s Area)",
-  "tooltips.casting.stats.flight": "Flight",
-  "tooltips.casting.stats.fortune": "Fortune - %s",
-  "tooltips.casting.stats.ignite": "Ignite - %s%% Chance",
-  "tooltips.casting.stats.knockback": "Knockback - %s",
-  "tooltips.casting.stats.lava_walker": "Lava Walker",
-  "tooltips.casting.stats.lifesteal": "Lifesteal - %s%% Damage Restored",
-  "tooltips.casting.stats.looting": "Looting - %s",
-  "tooltips.casting.stats.magnet": "Magnet - %s",
+  "tooltips.casting.stats.auto_smelt": "- Auto Smelt - %s",
+  "tooltips.casting.stats.beheading": "- Beheading - %s%% Chance",
+  "tooltips.casting.stats.efficiency": "- Efficiency - %s",
+  "tooltips.casting.stats.equipment_level": "Equipment Level %s XP: %s/%s",
+  "tooltips.casting.stats.excavation": "- Excavation - %s (%sx%s Area)",
+  "tooltips.casting.stats.flight": "- Flight",
+  "tooltips.casting.stats.fortune": "- Fortune - %s",
+  "tooltips.casting.stats.ignite": "- Ignite - %s%% Chance",
+  "tooltips.casting.stats.knockback": "- Knockback - %s",
+  "tooltips.casting.stats.lava_walker": "- Lava Walker",
+  "tooltips.casting.stats.lifesteal": "- Lifesteal - %s%% Damage Restored",
+  "tooltips.casting.stats.looting": "- Looting - %s",
+  "tooltips.casting.stats.magnet": "- Magnet - %s",
   "tooltips.casting.stats.modifiers": "Modifiers - %s/%s",
-  "tooltips.casting.stats.night_vision": "Night Vision",
-  "tooltips.casting.stats.protection": "Protection - %s",
-  "tooltips.casting.stats.repairing": "Repairing - %s",
-  "tooltips.casting.stats.sharpness": "Sharpness - %s (+%s Attack Damage)",
-  "tooltips.casting.stats.silk_touch": "Silk Touch",
-  "tooltips.casting.stats.speed": "Speed - %s",
-  "tooltips.casting.stats.step_assist": "Step Assist - %s",
-  "tooltips.casting.stats.teleporting": "Teleporting - %s (%s Blocks)",
-  "tooltips.casting.stats.torch_placing": "Torch Placing",
-  "tooltips.casting.stats.unbreaking": "Unbreaking - %s",
-  "tooltips.casting.stats.water_breathing": "Water Breathing",
-  "tooltips.casting.stats.water_walker": "Water Walker",
+  "tooltips.casting.stats.night_vision": "- Night Vision",
+  "tooltips.casting.stats.protection": "- Protection - %s",
+  "tooltips.casting.stats.repairing": "- Repairing - %s",
+  "tooltips.casting.stats.sharpness": "- Sharpness - %s (+%s Attack Damage)",
+  "tooltips.casting.stats.silk_touch": "- Silk Touch",
+  "tooltips.casting.stats.speed": "- Speed - %s",
+  "tooltips.casting.stats.step_assist": "- Step Assist - %s",
+  "tooltips.casting.stats.teleporting": "- Teleporting - %s (%s Blocks)",
+  "tooltips.casting.stats.torch_placing": "- Torch Placing",
+  "tooltips.casting.stats.unbreaking": "- Unbreaking - %s",
+  "tooltips.casting.stats.water_breathing": "- Water Breathing",
+  "tooltips.casting.stats.water_walker": "- Water Walker",
   "tooltips.casting.sword_modifiers": "- Swords"
 }
