@@ -152,30 +152,31 @@ public class CastingLangProvider extends LanguageProvider {
         addTooltipTranslation("information.flight", "Gives armor Flight, allows the player to fly");
 
         addTooltipTranslation("stats.modifiers", "Modifiers - %s/%s");
-        addTooltipTranslation("stats.auto_smelt", "Auto Smelt - %s");
-        addTooltipTranslation("stats.beheading", "Beheading - %s%% Chance");
-        addTooltipTranslation("stats.efficiency", "Efficiency - %s");
-        addTooltipTranslation("stats.excavation", "Excavation - %s (%sx%s Area)");
-        addTooltipTranslation("stats.fortune", "Fortune - %s");
-        addTooltipTranslation("stats.ignite", "Ignite - %s%% Chance");
-        addTooltipTranslation("stats.knockback", "Knockback - %s");
-        addTooltipTranslation("stats.lifesteal", "Lifesteal - %s%% Damage Restored");
-        addTooltipTranslation("stats.looting", "Looting - %s");
-        addTooltipTranslation("stats.magnet", "Magnet - %s");
-        addTooltipTranslation("stats.protection", "Protection - %s");
-        addTooltipTranslation("stats.repairing", "Repairing - %s");
-        addTooltipTranslation("stats.sharpness", "Sharpness - %s (+%s Attack Damage)");
-        addTooltipTranslation("stats.silk_touch", "Silk Touch");
-        addTooltipTranslation("stats.step_assist", "Step Assist - %s");
-        addTooltipTranslation("stats.teleporting", "Teleporting - %s (%s Blocks)");
-        addTooltipTranslation("stats.torch_placing", "Torch Placing");
-        addTooltipTranslation("stats.unbreaking", "Unbreaking - %s");
-        addTooltipTranslation("stats.water_walker", "Water Walker");
-        addTooltipTranslation("stats.lava_walker", "Lava Walker");
-        addTooltipTranslation("stats.speed", "Speed - %s");
-        addTooltipTranslation("stats.water_breathing", "Water Breathing");
-        addTooltipTranslation("stats.night_vision", "Night Vision");
-        addTooltipTranslation("stats.flight", "Flight");
+        addTooltipTranslation("stats.equipment_level", "Equipment Level %s XP: %s/%s");
+        addTooltipTranslation("stats.auto_smelt", "- Auto Smelt - %s");
+        addTooltipTranslation("stats.beheading", "- Beheading - %s%% Chance");
+        addTooltipTranslation("stats.efficiency", "- Efficiency - %s");
+        addTooltipTranslation("stats.excavation", "- Excavation - %s (%sx%s Area)");
+        addTooltipTranslation("stats.fortune", "- Fortune - %s");
+        addTooltipTranslation("stats.ignite", "- Ignite - %s%% Chance");
+        addTooltipTranslation("stats.knockback", "- Knockback - %s");
+        addTooltipTranslation("stats.lifesteal", "- Lifesteal - %s%% Damage Restored");
+        addTooltipTranslation("stats.looting", "- Looting - %s");
+        addTooltipTranslation("stats.magnet", "- Magnet - %s");
+        addTooltipTranslation("stats.protection", "- Protection - %s");
+        addTooltipTranslation("stats.repairing", "- Repairing - %s");
+        addTooltipTranslation("stats.sharpness", "- Sharpness - %s (+%s Attack Damage)");
+        addTooltipTranslation("stats.silk_touch", "- Silk Touch");
+        addTooltipTranslation("stats.step_assist", "- Step Assist - %s");
+        addTooltipTranslation("stats.teleporting", "- Teleporting - %s (%s Blocks)");
+        addTooltipTranslation("stats.torch_placing", "- Torch Placing");
+        addTooltipTranslation("stats.unbreaking", "- Unbreaking - %s");
+        addTooltipTranslation("stats.water_walker", "- Water Walker");
+        addTooltipTranslation("stats.lava_walker", "- Lava Walker");
+        addTooltipTranslation("stats.speed", "- Speed - %s");
+        addTooltipTranslation("stats.water_breathing", "- Water Breathing");
+        addTooltipTranslation("stats.night_vision", "- Night Vision");
+        addTooltipTranslation("stats.flight", "- Flight");
 
         addTooltipTranslation("all_modifiers", "- All");
         addTooltipTranslation("pickaxe_modifiers", "- Pickaxes");
